--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </div>
     
       <div id="main">
-        <button class="openbtn" onclick="openNav()">&#9776; Open Sidebar</button>
+        <button class="openbtn" onclick="openNav()">&#9776;</button>
         
     <!-- main code here -->
     <h1>Axoland</h1>
