--- a/index.html
+++ b/index.html
@@ -32,15 +32,22 @@
   </body>
   <script>
     /* Set the width of the sidebar to 250px and the left margin of the page content to 250px */
-function openNav() {
-  document.getElementById("mySidebar").style.width = "250px";
-  document.getElementById("main").style.marginLeft = "250px";
-}
+const menuIcon = document.getElementById("menuIcon");
+const sideMenu = document.getElementById("sideMenu");
+const bodyDiv = document.getElementById("body"); // Selecting the <div> with ID "body"
+const content = document.getElementById("content"); // Selecting the content div
 
-/* Set the width of the sidebar to 0 and the left margin of the page content to 0 */
-function closeNav() {
-  document.getElementById("mySidebar").style.width = "0";
-  document.getElementById("main").style.marginLeft = "0";
-}
+menuIcon.addEventListener("click", () => {
+    sideMenu.classList.toggle("active");
+    bodyDiv.classList.toggle("blur-effect"); // Toggle the blur-effect class on the specified <div>
+});
+
+// Close the menu and remove blur effect when tapping outside
+document.addEventListener("click", (event) => {
+    if (!sideMenu.contains(event.target) && !menuIcon.contains(event.target)) {
+        sideMenu.classList.remove("active");
+        bodyDiv.classList.remove("blur-effect"); // Remove blur from the specified <div>
+    }
+});
   </script>
 </html>
