--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
     
       <div id="main">
         <button class="openbtn" onclick="openNav()">&#9776;</button>
-        
+
+        <div class="menu-icon" id="menuIcon">&#9776;</div>
     <!-- main code here -->
     <h1>Axoland</h1>
 
